# Coles-AIOps

./: .gitignore  README.md  main.py  params.yaml  pyproject.toml  requirements.txt
configs/: hand_landmarks.yaml  pose_estimation.yaml  video_classifier.yaml
experiments/: comparison_summary.json  hand_landmarks_baseline_20260327T091936Z.json  hand_landmarks_baseline_20260327T091940Z.json  hand_landmarks_baseline_20260327T092025Z.json  hand_landmarks_baseline_20260327T092029Z.json  pose_estimation_sweep_a_20260327T091940Z.json  pose_estimation_sweep_a_20260327T092029Z.json
mlruns/0/: meta.yaml
mlruns/590282665179918134/: meta.yaml
mlruns/590282665179918134/138ace22dbb9471aa3ce417da027c999/: meta.yaml
mlruns/590282665179918134/138ace22dbb9471aa3ce417da027c999/artifacts/: hand_landmarks_baseline_summary.json
mlruns/590282665179918134/138ace22dbb9471aa3ce417da027c999/metrics/: badge_roi_iou  flick_f1  (+1 more)
mlruns/590282665179918134/57e6622f9d324dc4a4d135e34f023bb6/: meta.yaml
mlruns/590282665179918134/67f1413049c84d819447a3aa9864df31/: meta.yaml
mlruns/590282665179918134/892ebec0ef884b63ba7ace9e60d2e5fe/: meta.yaml
mlruns/590282665179918134/a60229bd4a324501ad606e3fb38b357f/: meta.yaml
mlruns/590282665179918134/da1324aea0cb44899feb5d42d6faca1e/: meta.yaml
src/: __init__.py  data_ingestion.py  experiment_runner.py  feature_engineering.py  manual_pipeline.py  mlflow_tracking.py  model_evaluation.py  model_registry.py  model_training.py  pipeline.py  preprocessing.py  roi_extraction.py  utils.py
tests/: test_imports.py  test_pipeline_wiring.py
(+21 files in other folders)
