[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gesture-vision-experiments"
version = "0.1.0"
description = "Modular experimentation scaffold for gesture recognition pipelines"
requires-python = ">=3.10"
dependencies = [
  "mlflow==2.22.0",
  "PyYAML==6.0.2"
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
